force-app/main/default/objects/Patient_History__c/Patient_History__c.object-meta.xml
<CustomObject>
    <label>Patient History</label>
    <nameField>
        <label>Patient History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>