force-app/main/default/objects/Patient_History__c/fields/Exam_Notes_Rich__c.field-meta.xml
<CustomField>
    <fullName>Exam_Notes_Rich__c</fullName>
    <label>Exam Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>