force-app/main/default/objects/Patient_History__c/fields/History_Details_Rich__c.field-meta.xml
<CustomField>
    <fullName>History_Details_Rich__c</fullName>
    <label>History Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>