force-app/main/default/objects/Patient_History__c/fields/Plan_Rich__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rich__c</fullName>
    <label>Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>