force-app/main/default/objects/Patient_History__c/fields/Record_History_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_History_Date__c</fullName>
    <label>Record History Date</label>
    <type>Date</type>
</CustomField>