force-app/main/default/objects/Patient_History__c/fields/Related_Consult__c.field-meta.xml
<CustomField>
    <fullName>Related_Consult__c</fullName>
    <label>Related Consult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>